Fixong client images when they get a link / too big

--- a/torchbox/static/torchbox/css/main.css
+++ b/torchbox/static/torchbox/css/main.css
@@ -735,6 +735,10 @@ overflow: hidden;
     max-width: 80%;
 }
 
+.clients li a img {
+    padding: 1.25em;
+}
+
 .clients li a {
     transition: all 0.2s ease;
 }
